CHANGES

release 73.4
- build procedure for the web server
- test that resets modification time of test files is directed away from source distribution
- top-level .gitignore file to stop git reacting to back-up files and files generated in a normal build

release 73.3
- change MiSeq samplesheet writing location to sf49

release 73.2
- get build version from git tag or version with Keith's gitver script
- inject module version into npg::view when copying it to blib

release 73.1
- rename NPG_REFERENCE_REPOSITORY type to NPG_TRACKING_REFERENCE_REPOSITORY
  to allow for the new and original npg_common modules to co-exist
- npg_tracking::data::reference::list - do not export repository root since
  this is only needed for testing

release 73.0
- ref&bait finders and runfolder modules - copies created under npg_tracking RT#306995
  dependencies withing this svn project refactored to use new modules
- Build.PL amended to install a version of CGI compatible with the post requests in tests
- sample_description method added to the lims interface
- ensure correct number of lanes in NPG (tracking GUI and the database) for HiSeq2500 RT#306985

release 72.8
- live and dev sections removed from the config file with db credentials
- new instrument status 'wash in progress' RT#305630
- tag from sample description for John Collins libraries RT#301185

release 72.7
- npg_common::roles::run, npg_common::roles::run::lane and npg_common::roles::run::lane::tag moved to npg_tracking::glossary; dependent code refactored
- dependency on npg_common::roles::log removed

release 72.6
- ensure email templates are specified on the script level
- staging monitor - cope with dev env variable being not set

release 72.5
- MiSeq samplesheet generation: list on-instrument genome reference files RT#301274
- infer the tag sequence from a sample description - sample level only RT#301185
- removed explicit dependency on /software/solexa
- removed explicit dependency on npg_common::config